search ingine optimize.

--- a/project/frontend/index.html
+++ b/project/frontend/index.html
@@ -29,6 +29,13 @@
             <option value="jain">Jain</option>
           </select>
         </label>
+        <div class="field taste-field">
+          <span>Taste preference</span>
+          <div id="tasteFilters" class="taste-filters" aria-live="polite">
+            <p class="muted field-hint">Loading taste tags...</p>
+          </div>
+          <p class="field-hint">Choose the flavors you crave to narrow replacements.</p>
+        </div>
         <button id="searchBtn" type="button">Find dishes</button>
       </section>
 
